# betafpv-f3

./: Cargo.toml  README.md  flash-example  memory.x
.cargo/: config
examples/: euler.rs  led-control.rs  motor-control.rs  mpu.rs  sensor-fusion.rs  serial-comm.rs
src/: lib.rs  write.rs
