[package]
name = "betafpv-f3"
version = "0.1.0"
authors = ["Josh Mcguigan"]

[dependencies]
mpu9250 = { path = "../mpu9250" }
cortex-m = "*"

[dependencies.stm32f30x-hal]
git = "https://github.com/JoshMcguigan/stm32f30x-hal"
version = "*"

[dev-dependencies]
cortex-m-rt = "*"
panic-semihosting = "*"

[features]
rt = ["stm32f30x-hal/rt"]
