[package]
name = "betafpv-f3"
version = "0.1.0"
authors = ["Josh Mcguigan"]

[dependencies]
mpu9250 = { git = "https://github.com/JoshMcguigan/mpu9250" }

[dependencies.stm32f30x-hal]
git = "https://github.com/JoshMcguigan/stm32f30x-hal"
version = "*"

[dev-dependencies]
cortex-m-rt = "*"
panic-semihosting = "0.5.1"
bit-bang-serial = { git = "https://github.com/JoshMcguigan/bit-bang-serial" }
madgwick = "0.1.1"

[features]
rt = ["stm32f30x-hal/rt"]
